syntax = 'proto3';

package proto.user.v1;

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ChangeUserStatus(ChangeUserStatusRequest) returns (ChangeUserStatusResponse) {}

  // auth
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 count = 2;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string id = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  // empty
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  // empty
}

message ChangeUserStatusRequest {
  string id = 1;
  string user_status = 2;
}

message ChangeUserStatusResponse {
  // empty
}

// auth
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  User user = 1;
  string token = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  // empty
}